# workshop_docker_compose

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py
