[tool.poetry]
name = "workshop-docker-compose"
version = "0.1.0"
description = ""
authors = ["Jean Torre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.8.0"
pre-commit = "^3.8.0"
streamlit = "^1.38.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
